--- a/index.html
+++ b/index.html
@@ -42,27 +42,17 @@ https://templatemo.com/tm-531-reflux
             <div class="author-content">
               <h4>Md. Kafi Khan</h4>
               <p>
-              kafikewu@gmail.com</p>
+              kafikewu@gmail.com <br>
+              <a href="https://scholar.google.com/citations?user=HLCZuqMAAAAJ&hl=en&authuser=1">Google Scholar Profile <i class="fa fa-link"></i></a></p>
             </div>
 
             <div class="social-network">
               <ul class="soial-icons">
                 <li>
-                  <a href="https://fb.com/templatemo"
-                    ><i class="fa fa-facebook"></i
-                  ></a>
+                  <a href="https://github.com/kafikewu"><i class="fa fa-github"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-dribbble"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-rss"></i></a>
+                  <a href="http://www.linkedin.com/in/kafik-han/"><i class="fa fa-linkedin"></i></a>
                 </li>
               </ul>
             </div>
@@ -90,7 +80,7 @@ https://templatemo.com/tm-531-reflux
             <div class="line-dec"></div>
           </div>
           <div>
-            I am a Software Engineer at BJIT Limited and a research intern at Carnegie Mellon University. Prior to this, I received my B.Sc.Engg. in Computer Science and Engineering from East West University, Bangladesh. During my undergrad, I worked with Mozammel H A Khan on algorithm development.
+            <h5>I am a Software Engineer at BJIT Limited and a research intern at Carnegie Mellon University. Prior to this, I received my B.Sc.Engg. in Computer Science and Engineering from East West University, Bangladesh. During my undergrad, I worked with Mozammel H A Khan on algorithm development.</h5>
           </div>
           <br>
           <hr>
@@ -98,6 +88,7 @@ https://templatemo.com/tm-531-reflux
           <div>
             <div>
               <div>
+                <h5>
                 Currently, I am using Computer Vision methods to in search of novel macromolecules from 3D cryo-electron tomography (cryo-ET) images of Sars-Cov-2 virus under the supervision of Dr. Min Xu and Mostofa Rafid Uddin. 
 
                 My primary research interests are,
@@ -105,6 +96,7 @@ https://templatemo.com/tm-531-reflux
                   <li>Computer Vision</li>
                   <li>Computational Biology</li>
                 </ol>
+                </h5>
               </div>
             </div>
             <!-- <div class="col-md-4">
@@ -181,32 +173,32 @@ https://templatemo.com/tm-531-reflux
           </div>
           <div>
             <div class="colored-text">
-                <h5>Practical Analysis of Macromolecule Identity from Cryo-electron Tomography Images using Deep Learning</h5>
-                <h6>Mostofa Rafid Uddin, Ajmain Yasar Ahmed, Md. Kafi Khan, Md Shahrar Fatemi, Xiangrui Zeng, Min Xu</h6>
-                <h6>AIPR 2021</h6>
+                <h5>Practical Analysis of Macromolecule Identity from Cryo-electron Tomography Images using Deep Learning <a href="https://ieeexplore.ieee.org/document/9762209"><i class="fa fa-link"></i></a></h5>
+                <h6>Mostofa Rafid Uddin, Ajmain Yasar Ahmed, <i>Md. Kafi Khan</i>, Md Shahrar Fatemi, Xiangrui Zeng, Min Xu</h6>
+                <h6>2021 IEEE Applied Imagery Pattern Recognition Workshop (AIPR)</h6>
             </div>
             <br>
             <div class="colored-text">
-              <h5>Focusing on the Unfocused: Understanding the Impact of Online Interactions with Small Scale Non-Profit Organizations Working for Benefit of Street Children in Bangladesh</h5>
-              <h6>Alvi Md. Ishmam, Rudaiba Adnin, Ishita Haque, Sadia Afroz, Sakil Sarker, Md. Kafi Khan, Afsana Mimi, Sriram Chellappan, A. B. M. Alim Al Islam</h6>
+              <h5>Focusing on the Unfocused: Understanding the Impact of Online Interactions with Small Scale Non-Profit Organizations Working for Benefit of Street Children in Bangladesh <a href="https://dl.acm.org/doi/abs/10.1145/3605150"><i class="fa fa-link"></i></a></h5>
+              <h6>Alvi Md. Ishmam, Rudaiba Adnin, Ishita Haque, Sadia Afroz, Sakil Sarker, <i>Md. Kafi Khan</i>, Afsana Mimi, Sriram Chellappan, A. B. M. Alim Al Islam</h6>
               <h6>ACM Journal on Computing and Sustainable Societies 2023</h6>
             </div>
             <br>
             <div class="colored-text">
-              <h5>K-Cosine-Medoids Clustering Algorithm</h5>
-              <h6>Md. Kafi Khan, Syed Mahmud Ahmed, Sakil Sarker, and Mozammel Khan</h6>
-              <h6>EICT 2021</h6>
+              <h5>K-Cosine-Medoids Clustering Algorithm <a href="https://ieeexplore.ieee.org/document/9733540"><i class="fa fa-link"></i></a></h5>
+              <h6><i>Md. Kafi Khan</i>, Syed Mahmud Ahmed, Sakil Sarker, and Mozammel Khan</h6>
+              <h6>2021 IEEE International Conference on Electrical Information and Communication Technology (EICT)</h6>
             </div>
             <br>
             <div class="colored-text">
-              <h5>K-Cosine-Means Clustering Algorithm</h5>
-              <h6>Md. Kafi Khan, Sakil Sarker, Syed Mahmud Ahmed, and Mozammel Khan</h6>
-              <h6>ICECIT 2021</h6>
+              <h5>K-Cosine-Means Clustering Algorithm <a href="https://ieeexplore.ieee.org/document/9641480"><i class="fa fa-link"></i></a></h5>
+              <h6><i>Md. Kafi Khan</i>, Sakil Sarker, Syed Mahmud Ahmed, and Mozammel Khan</h6>
+              <h6>2021 IEEE International Conference on Electronics, Communications and Information Technology (ICECIT)</h6>
             </div>
             <br>
             <div class="colored-text">
               <h5>Exploring Social Media Trends to Get Insights on the Sentiments of the people of Bangladesh in the Time of COVID-19</h5>
-              <h6>Md. Kafi Khan, Sakil Sarker, and Md Nayeem</h6>
+              <h6><i>Md. Kafi Khan</i>, Sakil Sarker, and Md Nayeem</h6>
               <h6> <a href="https://github.com/kafikewu/Exploring-Social-Media-Trends/blob/main/Exploring_Social_Media_Trends_to_Get_Insights_on_the_Sentiments_of_the_people_of_Bangladesh_in_the_Time_of_a_Global_Pandemic.pdf">Unpublished Manuscript</a></h6>
             </div>
             <br>
@@ -214,7 +206,7 @@ https://templatemo.com/tm-531-reflux
         </div>
       </section>
 
-      <section class="section" data-section="section4">
+      <section class="section my-work" data-section="section4">
         <div class="container">
           <div class="section-heading">
             <h2>Projects</h2>
@@ -281,7 +273,7 @@ https://templatemo.com/tm-531-reflux
           <div class="service-item">
             <div class="row">
               <div class="col-md-8">
-                <br><br>
+                <!-- <br><br> -->
                 <h4>East West University, Bangladesh</h4>
                 <h5>B.Sc. in Computer Science and Engineering</h5>
                 <h6>May 2017 - July 2021</h6>
@@ -290,9 +282,9 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-4">
                 <!-- <div class="fa-ewu"></div> -->
-                <div class="image-uni">
+                <!-- <div class="image-uni">
                   <img src="assets/images/EWU.jpg" alt="">
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -368,7 +360,17 @@ https://templatemo.com/tm-531-reflux
         </div>
       </section>
       <section class="section" data-section="section7">
-
+        <div class="container">
+          <div class="section-heading">
+            <h2>Contact</h2>
+            <div class="line-dec"></div>
+          </div>
+          <div class="service-item">
+            Personal Email: <a href="mailto:kafikewu@gmail.com">kafikewu@gmail.com</a> <br>
+            Office Email: <a href="mailto:kafi.khan@bjitgroup.com">kafi.khan@bjitgroup.com</a> <br>
+            Phone: (+880) 1515600054 
+          </div>
+        </div>
       </section>
     </div>
 
