--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ https://templatemo.com/tm-531-reflux
             <div>
               <div>
                 <h5>
-                Currently, I am using Computer Vision methods to in search of novel macromolecules from 3D cryo-electron tomography (cryo-ET) images of Sars-Cov-2 virus under the supervision of Dr. Min Xu and Mostofa Rafid Uddin. 
+                Currently, I am using Computer Vision methods in search of novel macromolecules from 3D cryo-electron tomography (cryo-ET) images of Sars-Cov-2 virus under the supervision of Dr. Min Xu and Mostofa Rafid Uddin. 
 
                 My primary research interests are,
                 <ol>
@@ -119,7 +119,7 @@ https://templatemo.com/tm-531-reflux
           </div>
             <div class="service-item">
               <h4>Carnegie Mellon University, Pittsburgh, Pennsylvania</h4>
-              <h5>Intern at Xu Lab, Department of Computational Biology</h5>
+              <h5>Research Intern at Xu Lab, Department of Computational Biology</h5>
               <h6>April 2021 - Present</h6>
               <h6>Supervisor: <b>Dr. Min Xu</b> and <b>Mostofa Rafid Uddin</b></h6>
               <h6>Responsibilities:</h6>
