--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@ https://templatemo.com/tm-531-reflux
             <div class="line-dec"></div>
           </div>
           <div>
-            <h5>I am a Software Engineer at BJIT Limited and a research intern at Carnegie Mellon University. Prior to this, I received my B.Sc.Engg. in Computer Science and Engineering from East West University, Bangladesh. During my undergrad, I worked with Mozammel H A Khan on algorithm development.</h5>
+            <h5>I am a PhD student at Purdue CS. My primary research area is Computational Biology.</h5>
+          </div>
+          <div>
+            <h5>Previously, I was a Software Engineer at BJIT Limited and a research intern at Carnegie Mellon University. I received my B.Sc.Engg. in Computer Science and Engineering from East West University, Bangladesh. During my undergrad, I worked with Mozammel H A Khan on algorithm development.</h5>
           </div>
           <br>
           <hr>
@@ -91,11 +94,6 @@ https://templatemo.com/tm-531-reflux
                 <h5>
                 Currently, I am using Computer Vision methods in search of novel macromolecules from 3D cryo-electron tomography (cryo-ET) images of Sars-Cov-2 virus under the supervision of Dr. Min Xu and Mostofa Rafid Uddin. 
 
-                My primary research interests are,
-                <ol>
-                  <li>Computer Vision</li>
-                  <li>Computational Biology</li>
-                </ol>
                 </h5>
               </div>
             </div>
@@ -120,7 +118,7 @@ https://templatemo.com/tm-531-reflux
             <div class="service-item">
               <h4>Carnegie Mellon University, Pittsburgh, Pennsylvania</h4>
               <h5>Research Intern at Xu Lab, Department of Computational Biology</h5>
-              <h6>April 2021 - Present</h6>
+              <h6>April 2021 - August 2023</h6>
               <h6>Supervisor: <b>Dr. Min Xu</b> and <b>Mostofa Rafid Uddin</b></h6>
               <h6>Responsibilities:</h6>
               <ol>      
@@ -131,7 +129,7 @@ https://templatemo.com/tm-531-reflux
             <div class="service-item">
               <h4>BJIT Limited, Dhaka</h4>
               <h5>Software Engineer</h5>
-              <h6>August 2021 - Present</h6>
+              <h6>August 2021 - Decemebr 2023t</h6>
               <h6>Manager: Md. Syedur Rahaman Khan</h6>
               <h6>Responsibilities:</h6>
               <ol>      
@@ -367,8 +365,8 @@ https://templatemo.com/tm-531-reflux
           </div>
           <div class="service-item">
             Personal Email: <a href="mailto:kafikewu@gmail.com">kafikewu@gmail.com</a> <br>
-            Office Email: <a href="mailto:kafi.khan@bjitgroup.com">kafi.khan@bjitgroup.com</a> <br>
-            Phone: (+880) 1515600054 
+            Office Email: <a href="mailto:kafi.khan@bjitgroup.com">khan555@purdue.edu</a> <br>
+            Phone: 765-553-1897
           </div>
         </div>
       </section>
