Hopefully final commit

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ https://templatemo.com/tm-531-reflux
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
             <div class="image">
-              <a href="#"><img src="assets/images/author-image.jpg" alt="" /></a>
+              <a href="#"><img src="assets/images/IMG_20230127_180433.jpg" alt="" /></a>
             </div>
             <div class="author-content">
               <h4>Md. Kafi Khan</h4>
@@ -74,13 +74,14 @@ https://templatemo.com/tm-531-reflux
       </div>
 
       <section class="section about-me" data-section="section1">
+        <!-- <img class="section-head-image" src="assets/images/TrevorMahlmann6_43e3f02a-da63-4254-8ac1-1acf23a0215e.jpg" alt="" /> -->
         <div class="container">
           <div class="section-heading">
             <h2>About Me</h2>
             <div class="line-dec"></div>
           </div>
           <div>
-            <h5>I am a PhD student at Purdue CS. My primary research area is Computational Biology.</h5>
+            <h5>I am a PhD student at the Department of Computer Science at Purdue University. My primary research area is Computational Biology.</h5>
           </div>
           <div>
             <h5>Previously, I was a Software Engineer at BJIT Limited and a research intern at Carnegie Mellon University. I received my B.Sc.Engg. in Computer Science and Engineering from East West University, Bangladesh. During my undergrad, I worked with Mozammel H A Khan on algorithm development.</h5>
@@ -89,14 +90,6 @@ https://templatemo.com/tm-531-reflux
           <hr>
           <br>
           <div>
-            <div>
-              <div>
-                <h5>
-                Currently, I am using Computer Vision methods in search of novel macromolecules from 3D cryo-electron tomography (cryo-ET) images of Sars-Cov-2 virus under the supervision of Dr. Min Xu and Mostofa Rafid Uddin. 
-
-                </h5>
-              </div>
-            </div>
             <!-- <div class="col-md-4">
               <div class="timeline">
                       <div class="timeline-component timeline-content">
@@ -115,6 +108,18 @@ https://templatemo.com/tm-531-reflux
             <h2>Experience</h2>
             <div class="line-dec"></div>
           </div>
+            <div class="service-item">
+              <h4>Purude University</h4>
+              <h5>Graduate Teaching Assistant (GTA), Department of Computer Science</h5>
+              <h6>January 2024 - Present</h6>
+              <h6>Supervisor: <b>Dr. Jeffrey A. Turkstra</b></h6>
+              <h6>Course: CS 240 (Programming in C) </h6>
+              <h6>Responsibilities:</h6>
+              <ol>      
+                <li>Grade exams and homework scripts of students.</li>
+                <li>Hold regular office hours to help students with their homework.</li>
+              </ol>
+            </div>
             <div class="service-item">
               <h4>Carnegie Mellon University, Pittsburgh, Pennsylvania</h4>
               <h5>Research Intern at Xu Lab, Department of Computational Biology</h5>
@@ -272,6 +277,20 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-8">
                 <!-- <br><br> -->
+                <h4>Purude University, West Lafayette, Indiana</h4>
+                <h5>Pursuing Ph.D. in Computer Science</h5>
+                <h5>Supervisor: Dr. Daisuke Kihara</h5>
+                <h6>January 2024 - Present</h6>
+              </div>
+              <div class="col-md-4">
+              </div>
+            </div>
+          </div>
+
+          <div class="service-item">
+            <div class="row">
+              <div class="col-md-8">
+                <!-- <br><br> -->
                 <h4>East West University, Bangladesh</h4>
                 <h5>B.Sc. in Computer Science and Engineering</h5>
                 <h6>May 2017 - July 2021</h6>
@@ -286,8 +305,9 @@ https://templatemo.com/tm-531-reflux
               </div>
             </div>
           </div>
+
           <br>
-          <h3>Certifications</h3>
+          <!-- <h3>Certifications</h3>
           <div class="colored-text">
             <h5>Neural Networks and Deep Learning</h5>
             <h6><a href="https://www.coursera.org/account/accomplishments/certificate/KCE6YPPHTDE">Certificate</a></h6>
@@ -295,7 +315,7 @@ https://templatemo.com/tm-531-reflux
           <div class="colored-text">
             <h5>Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization</h5>
             <h6><a href="https://www.coursera.org/account/accomplishments/certificate/KCE6YPPHTDE">Certificate</a></h6>
-          </div>
+          </div> -->
         </div>
       </section>
       <section class="section" data-section="section6">
