--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     />
 
     <title>Md. Kafi Khan Portfolio</title>
-<!--
+    <!-- <link rel="icon" href="/assets/images/purdue.jpg" type="image/icon type"> -->
+    <link rel="icon" type="image/" href="/assets/images/purdue.jpg" />
+    <!--
 Reflux Template
 https://templatemo.com/tm-531-reflux
 -->
@@ -31,7 +33,7 @@ https://templatemo.com/tm-531-reflux
   <body>
     <div id="page-wraper">
       <!-- Sidebar Menu -->
-      <div class="responsive-nav">
+      <div >
         <i class="fa fa-bars" id="menu-toggle"></i>
         <div id="menu" class="menu">
           <i class="fa fa-times" id="menu-close"></i>
@@ -42,7 +44,9 @@ https://templatemo.com/tm-531-reflux
             <div class="author-content">
               <h4>Md. Kafi Khan</h4>
               <p>
-              kafikewu@gmail.com <br>
+              Ph.D. Student | GTA <br>
+              @ Purdue CS <br>
+              
               <a href="https://scholar.google.com/citations?user=HLCZuqMAAAAJ&hl=en&authuser=1">Google Scholar Profile <i class="fa fa-link"></i></a></p>
             </div>
 
@@ -62,7 +66,7 @@ https://templatemo.com/tm-531-reflux
                 <li><a href="#section1">About me</a></li>
                 <li><a href="#section2">Experience</a></li>
                 <li><a href="#section3">Publications</a></li>
-                <li><a href="#section4">Projects</a></li>
+                <!-- <li><a href="#section4">Projects</a></li> -->
                 <li><a href="#section5">Education and Skills</a></li>
                 <li><a href="#section6">Awards and Honors</a></li>
                 <li><a href="#section7">Contact</a></li>
@@ -114,45 +118,24 @@ https://templatemo.com/tm-531-reflux
               <h6>January 2024 - Present</h6>
               <h6>Supervisor: <b>Dr. Jeffrey A. Turkstra</b></h6>
               <h6>Course: CS 240 (Programming in C) </h6>
-              <h6>Responsibilities:</h6>
-              <ol>      
-                <li>Grade exams and homework scripts of students.</li>
-                <li>Hold regular office hours to help students with their homework.</li>
-              </ol>
             </div>
             <div class="service-item">
               <h4>Carnegie Mellon University, Pittsburgh, Pennsylvania</h4>
               <h5>Research Intern at Xu Lab, Department of Computational Biology</h5>
               <h6>April 2021 - August 2023</h6>
               <h6>Supervisor: <b>Dr. Min Xu</b> and <b>Mostofa Rafid Uddin</b></h6>
-              <h6>Responsibilities:</h6>
-              <ol>      
-                <li>Analyzing Cryo-electron tomography data of Sars-CoV-2 virus with various imaging techniques.</li>
-                <li>Operating a GPU Cluster in order to test various deep learning models.</li>
-              </ol>
             </div>
             <div class="service-item">
               <h4>BJIT Limited, Dhaka</h4>
               <h5>Software Engineer</h5>
               <h6>August 2021 - Decemebr 2023t</h6>
               <h6>Manager: Md. Syedur Rahaman Khan</h6>
-              <h6>Responsibilities:</h6>
-              <ol>      
-                <li>Developing CRM solutions with Salesforce.</li>
-                <li>Writing clean and efficient code and documenting various software related artefacts.</li>
-              </ol>
             </div>
             <div class="service-item">
               <h4>East West University, Dhaka</h4>
               <h5>Undergraduate Teaching Assistant (UTA)</h5>
               <h6>May 2019 - May 2021</h6>
               <h6>Supervisor: Rashedul Amin Tuhin</h6>
-              <h6>Responsibilities:</h6>
-              <ol>      
-                <li>Helping the course instructor to conduct lab sessions.</li>
-                <li>Grading the student's lab assignments.</li>
-                <li>Holding office hours and lab sessions to help the students complete their assignments and assist with any problem they have.</li>
-              </ol>
             </div>
             <!-- <div class="service-item">
               <h4>Easy Customize</h4>
@@ -199,75 +182,20 @@ https://templatemo.com/tm-531-reflux
               <h6>2021 IEEE International Conference on Electronics, Communications and Information Technology (ICECIT)</h6>
             </div>
             <br>
-            <div class="colored-text">
+            <!-- <div class="colored-text">
               <h5>Exploring Social Media Trends to Get Insights on the Sentiments of the people of Bangladesh in the Time of COVID-19</h5>
               <h6><i>Md. Kafi Khan</i>, Sakil Sarker, and Md Nayeem</h6>
               <h6> <a href="https://github.com/kafikewu/Exploring-Social-Media-Trends/blob/main/Exploring_Social_Media_Trends_to_Get_Insights_on_the_Sentiments_of_the_people_of_Bangladesh_in_the_Time_of_a_Global_Pandemic.pdf">Unpublished Manuscript</a></h6>
-            </div>
+            </div> -->
             <br>
           </div>          
         </div>
       </section>
 
-      <section class="section my-work" data-section="section4">
-        <div class="container">
-          <div class="section-heading">
-            <h2>Projects</h2>
-            <div class="line-dec"></div>
-            <!-- <span
-              >My research interests largely revolves around Computer Vision</span
-            > -->
-          </div>
-            <div>
-              <div class="colored-text">
-                <h5>TensorFlow: Advanced Techniques Specialization (Custom Models, Layers, and Loss Function)</h5>
-                <h6>
-                  <a href="https://github.com/kafikewu/Custom-Models-Layers-and-Loss-Functions_Coursera">Github Link</a>
-                  <a href="https://www.coursera.org/learn/custom-models-layers-loss-functions-with-tensorflow">Course</a>
-                </h6>
-              </div>
-            <br>
-            <div class="colored-text">
-              <h5>Arrhythmia Detection: Evaluation of Various Machine Learning Approaches</h5>
-              <h6>
-                <a href="https://github.com/kafikewu/Arrhythmia-Detection">Github Link</a>
-                <a href="https://github.com/kafikewu/Arrhythmia-Detection/blob/main/Arrhythmia%20Detection%20Evaluation%20of%20Various%20Machine%20Learning%20Approaches.pdf">Manuscript</a>
-              </h6>
-              <!-- <h6>ACM Journal on Computing and Sustainable Societies 2023</h6> -->
-
-            </div>
-            <br>
-            <div class="colored-text">
-              <h5>Stock Market Prediction: Using Exponential Smoothing for Price Forecasting and SVM for Sales Volume Prediction</h5>
-              <h6>
-                <a href="https://github.com/kafikewu/Stock-Market-Prediction">Github Link</a> 
-                <a href="https://github.com/kafikewu/Stock-Market-Prediction/blob/main/Stock%20Market%20Prediction.pdf">Manuscript</a>
-              </h6>
-              <!-- <h6>EICT 2021</h6> -->
-            </div>
-            <br>
-            <div class="colored-text">
-                <h5>Pattern Mining on Kosarak and Chess dataset using Python</h5>
-                <h6><a href="https://github.com/kafikewu/Pattern-Mining">Github Link</a></h6>
-            </div>
-            <br>
-            <div class="colored-text">
-              <h5><h5>Token Management System using Django and PostgreSQL </h5>
-              <h6><a href="https://github.com/kafikewu/token_management_system">Github Link</a></h6></h5>
-            </div>
-            <br>
-            <div class="colored-text">
-              <h5><h5>Railway Management System using Object Oriented Programming</h5>
-              <h6><a href="https://github.com/kafikewu/Railway-Management-System">Github Link</a></h6></h5>
-            </div>
-
-          </div>          
-        </div>
-      </section>
       <section class="section" data-section="section5">
         <div class="container">
           <div class="section-heading">
-            <h2>Education and Skills</h2>
+            <h2>Education</h2>
             <div class="line-dec"></div>
             <!-- <span
               >My research interests largely revolves around Computer Vision</span
@@ -295,7 +223,6 @@ https://templatemo.com/tm-531-reflux
                 <h5>B.Sc. in Computer Science and Engineering</h5>
                 <h6>May 2017 - July 2021</h6>
                 <h6>Distinction: Summa Cum Laude</h6>
-                <h6>Class Rank: 1</h6>
               </div>
               <div class="col-md-4">
                 <!-- <div class="fa-ewu"></div> -->
@@ -385,7 +312,7 @@ https://templatemo.com/tm-531-reflux
           </div>
           <div class="service-item">
             Personal Email: <a href="mailto:kafikewu@gmail.com">kafikewu@gmail.com</a> <br>
-            Office Email: <a href="mailto:kafi.khan@bjitgroup.com">khan555@purdue.edu</a> <br>
+            Work Email: <a href="mailto:kafi.khan@bjitgroup.com">khan555@purdue.edu</a> <br>
             Phone: 765-553-1897
           </div>
         </div>
